# bnotes

./: .gitignore  Cargo.toml  README.md  flake.nix
docs/plans/: 2026-01-15-bnotes-design.md  2026-01-15-git-sync-design.md  2026-01-16-periodic-notes-design.md  2026-01-16-testing-design.md  2026-01-17-color-support-design.md  2026-01-17-color-support.md  2026-01-17-enhanced-search-design.md  2026-01-17-enhanced-search.md  2026-01-17-library-cli-separation-design.md  2026-01-17-module-simplification-design.md  2026-01-20-task-list-alignment-design.md  2026-01-20-unified-edit-command-design.md  2026-01-20-urgency-tracking-design.md  2026-01-20-urgency-tracking.md  2026-01-21-auto-update-timestamp-design.md  2026-01-21-task-filtering-design.md  2026-01-21-task-tags-design.md  2026-01-26-weekly-task-migration-design.md
nix/pkgs/: beads.nix
src/: cli_config.rs  commands.rs  config.rs  git.rs  health.rs  health_lib.rs  lib.rs  lib_config.rs  link.rs  link_lib.rs  main.rs  note.rs  periodic.rs  repository.rs  repository_lib.rs  storage.rs  task.rs  task_lib.rs  template.rs  templates.rs  util.rs
src/cli/: colors.rs  commands.rs  config.rs  mod.rs  utils.rs
src/commands/: doctor.rs  edit.rs  init.rs  mod.rs  new.rs  note.rs  periodic.rs  search.rs  sync.rs  task.rs
templates/: README.md  book.md  daily.md  default.md  meeting.md  person.md  project.md  quarterly.md  weekly.md
tests/: search_integration_test.rs
