[package]
name = "bnotes"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_yaml = "0.9"
pulldown-cmark = "0.12"
walkdir = "2.5"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
regex = "1.11"
