[package]
name = "bnotes"
version = "0.1.0"
edition = "2024"

[lib]
name = "bnotes"
path = "src/lib.rs"

[[bin]]
name = "bnotes"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_yaml = "0.9"
pulldown-cmark = "0.12"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
termcolor = "1.4"
